--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   },
   "homepage": "https://github.com/AnkitaKhurana/Chat_App#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "ejs": "~2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "hbs": "^4.0.1",
     "mysql": "^2.13.0",
     "mysql2": "^1.3.2",
     "passport": "^0.3.2",
-    "ejs": "~2.5.6",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^3.30.4",
