--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^3.30.4",
-    "uid2": "0.0.3"
+    "uid2": "0.0.3",
+    "pg" : "7.4.0"
   }
 }
